fix grid gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,6 @@ footer p {
   font-size: 16px;
   line-height: 24px;
   opacity: 0.9;
-  margin-right: 20px;
 }
 footer ul {
   padding: 0;
@@ -100,6 +99,7 @@ footer a {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 @media (max-width: 960px) {
